--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,15 @@ h2 {
     color: #333;
 }
 
+.details {
+    display: none;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #e9ecef;
+    border-radius: 4px;
+    border-left: 4px solid #4c7656;
+}
+
 /* Media Queries for Mobile Devices */
 @media only screen and (max-width: 600px) {
     header, footer {
