--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 200px;
 }
 
 .project {
@@ -77,25 +77,40 @@ h2 {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
-    background-color: #f9f9f9;
+    background-color: #e7f2e9;
 }
 
 .project img {
     width: 100%;
     border-radius: 8px;
-    height: auto;
+    height: 50%;
 }
 
 .details {
     display: none;
     margin-top: 10px;
-    padding: 10px;
+    padding: auto;
     background-color: #e9ecef;
     border-radius: 4px;
     border-left: 4px solid #4c7656;
 }
 
-contact-form {
+.show-details {
+    padding: 10px 20px;
+    background-color: #5f7965;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.show-details:hover {
+    background-color: #4c7656;
+}
+
+.contact-form {
     display: flex;
     flex-direction: column;
     max-width: 400px;
