--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 /* General Styles */
 body {
     font-family: Roboto;
@@ -95,6 +96,10 @@ h2 {
     border-left: 4px solid #4c7656;
 }
 
+.details.visible {
+    display: block;
+}
+
 .show-details {
     padding: 10px 20px;
     background-color: #5f7965;
@@ -143,14 +148,8 @@ button[type="submit"] { /* submit button */
     cursor: pointer;
 }
 
-button[type="submit"] {
+button[type="submit"] :hover{
     background-color: #4c7656;
-}
-
-.error-message {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
 }
 
 input::placeholder,
@@ -192,5 +191,9 @@ textarea {
 
     section:last-of-type { /* extra padding to prevent overlapping when viewing on a mobile device */
         padding-bottom: 80px;
+    }
+
+    .projects-container {
+        gap: 20px;
     }
 }
