--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background-color: #b9cfbe;
@@ -13,7 +13,7 @@ header {
     color: white;
     text-align: center;
     padding: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 footer {
@@ -24,7 +24,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    font-family: 'Roboto', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 section:last-of-type{ /* prevent overlapping */
@@ -108,6 +108,7 @@ h2 {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .show-details:hover {
@@ -145,6 +146,8 @@ button[type="submit"] { /* submit button */
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: medium;
 }
 
 button[type="submit"]:hover{
@@ -154,6 +157,7 @@ button[type="submit"]:hover{
 input::placeholder,
 textarea::placeholder {
     color: #999;
+    font-size: smaller;
 }
 
 input, textarea {
