--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
