basic restyling of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
     --text-color: #333333;
     --background-color: #F9F9F9;
     --card-bg: #FFFFFF;
-    --header-bg: #FFB3C6; 
+    --header-bg: #8e3a4f; 
     --footer-bg: #A5D8D4; 
-    --button-bg: #FFB3C6;
+    --button-bg: #ac2749;
     --button-hover: #FF8FAB;
     --border-color: #E0E0E0;
     --link-color: #4A6FA5;
